--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter_svg: ^2.0.7
   flutter_native_splash: ^2.3.3
   google_fonts: ^6.1.0
+  flutter_onboarding_slider: ^1.0.11
 
 dev_dependencies:
   flutter_test:
