--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter_native_splash: ^2.3.3
   google_fonts: ^6.1.0
   flutter_onboarding_slider: ^1.0.11
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
